--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,11 @@ spring.datasource.password=Asdfqwer1!
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # JPA Settings
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.hbm2dll.auto=create
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.database=mysql
+spring.jpa.database=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
